# ModernesCppSource

./: CMakeLists.txt
source/: autoGetType.cpp
